Hilt ViewModels and Dependency Injection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,9 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    def hilt_lifecycle = "1.0.0-alpha01"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle"
+    // When using Kotlin.
+    kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle"
 }
